update tomcat memory settings